Restore customizations and blog post from previous repository.

--- a/_data/locales/es.yml
+++ b/_data/locales/es.yml
@@ -75,5 +75,9 @@ post:
 
 # categories page
 categories:
-  category_measure: categorias
-  post_measure: entradas
+  category_measure:
+    singular: categoría
+    plural: categorías
+  post_measure:
+    singular: entrada
+    plural: entradas
